# Parallel-Image-Filters

./: .gitignore  CMakeLists.txt  ConvParallel.py  ConvParallelAdvanced.py  ConvParallelAdvancedDumb.py  ConvSeq.py  ConvSeqDumb.py  CudaConv.cu  README.md  analyze_results.py  benchmark.py  benchmark.sh  benchmark_results.json  check_occupancy.py  visualize_benchmark.py
AnalyseResults/: benchmark_results.json  compute_speedup.py  cpu_speedup_tables.tex  cuda_speedup_tables.tex  generate_all_plot.py  generate_cpu_speedup_tables.py  generate_cuda_speedup_tables.py  speedup_results.json
ConvolutionScripts/: ConvParallelAdvanced.py  ConvParallelAdvancedDumb.py  ConvSeqDumb.py
